--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,19 @@
     <artifactId>KTPM-17-31-BugTracker</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.openjfx</groupId>
+                <artifactId>javafx-maven-plugin</artifactId>
+                <version>0.0.4</version>
+                <configuration>
+                    <mainClass>HelloFX</mainClass>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
     <properties>
         <maven.compiler.source>1.11</maven.compiler.source>
         <maven.compiler.target>1.11</maven.compiler.target>
@@ -66,6 +79,6 @@
             <version>9.0.10</version>
         </dependency>
 
-
     </dependencies>
+
 </project>
